--- a/www/index.html
+++ b/www/index.html
@@ -72,6 +72,7 @@
 		          <p>{{song.band}} <small> {{song.calidad}} </small></p>
 		          <p>
 		          	<button class="md-raised md-primary" ng-click="play(song.id_song)">Play</button>
+		          	<button class="md-raised md-primary" ng-click="download(song.id_song, song.titulo, song.band)">Download</button>
 		          </p>
 		    </a>
 
